<resources>
    <string name="app_name">KKCP Admin App</string>
    <string name="kkcp">KKCP</string>
    <string name="admin">Admin</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="login">Log In</string>
    <string name="send_code">Send Code</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="Lv1">Lv1</string>
    <string name="Lv3">Lv3</string>
    <string name="Lv2">Lv2</string>
    <string name="delete">Delete</string>
</resources>